fix(security): enforce resource ownership across every mutating endpoint
SecurityConfig ends at anyRequest().authenticated(), and PatientController,
DoctorController, SlotController and PaymentController carried neither
@PreAuthorize nor an in-service ownership check. Any authenticated patient
could read every patient's PII, delete any patient, rewrite any doctor's
consultation fee, and wipe any doctor's calendar. AppointmentService also left
getAppointmentById/getAppointmentByNumber unguarded, exposing clinical notes
behind a guessable appointment number.

Authorization
- Extend AppointmentAccessGuard with assertCanViewAppointment and
  assertOwnsAppointmentAsPatient; add SelfAccessGuard for the "own record"
  rule, checking role as well as id since doctor and patient ids come from
  different tables.
- Thread UserPrincipal into the patient, doctor, slot, payment and appointment
  paths; add @PreAuthorize as defence in depth.
- Fail closed in DocumentService.validateAccess, which fell through to
  "allowed" for any role that was neither PATIENT nor DOCTOR, and scope
  deleteDocument to the appointment rather than to the DOCTOR role, which let
  any doctor destroy any patient's records.
- Delete GET /api/patients and GET /api/patients/phone: a full PII dump and a
  phone-enumeration oracle, with no caller and no admin role to scope them to.
- Delete POST /api/doctors|patients/register, which duplicated /api/auth/* and,
  being authenticated rather than public, let any patient create doctor
  accounts.

Correctness
- createBulkSlots advanced with LocalTime.plusMinutes, which wraps at midnight;
  a day ending 23:59 looped forever, growing a list and querying every
  iteration. Iterate on integer minutes, and resolve overlap from one query.
- @Recover resolves per bean and its search ignores parameter compatibility, so
  the five id-based @Retryable methods returned 400 "argument type mismatch".
  Recovery also runs for exceptions never retried, and none matched, so ev